@@ -13,6 +13,7 @@
 * Nigel McNie
 * Paulo Tanimoto
 * Nathan Saper
+* Albert Menkveld
 
 I want to say a big <b>THANK YOU</b> for all people which supported this project in this way.
 </pre>
